--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ document.querySelectorAll('.view-btn').forEach(button => {
             </p>
             <!-- Your large photo -->
             <br><br>
-            <img decoding="async" src="C:\Users\varsh\OneDrive\Documents\Pictures\G1.jpg" alt="Your Photo" style="border-radius: 50%; width: 250px; height: 250px; object-fit: cover; margin-top: 20px;"><br><br>
+            <img decoding="async" src="G1.jpg" alt="Your Photo" style="border-radius: 50%; width: 250px; height: 250px; object-fit: cover; margin-top: 20px;"><br><br>
      
     <!-- SOCIAL LINK -->
         <div class="social-links">
@@ -635,7 +635,7 @@ document.querySelectorAll('.view-btn').forEach(button => {
     <section id="about">
         <h2 class="abth2">About Me</h2>
         <div class="about-content">
-            <img src="C:\Users\varsh\OneDrive\Documents\Pictures\WhatsApp Image 2025-01-07 at 21.04.31_15e648e3.jpg" alt="Your Photo">
+            <img src="WhatsApp Image 2025-01-07 at 21.04.31_15e648e3.jpg" alt="Your Photo">
 
 <p> Hi, I'm <strong>Vanshika Gupta</strong>, a passionate and dedicated web developer                                                                       with a strong foundation in modern programming languages and technologies.
  I specialize in creating dynamic, user-friendly, and innovative web solutions that bring ideas to life.
@@ -654,32 +654,32 @@ Whether it's developing responsive front-end designs or ensuring robust back-end
 <div class="border-hover">
   <div class="container">
    <div class="choice1">
-    <img class="imgs" src="D:\my web\html.png" alt>
+    <img class="imgs" src="html.png" alt>
      <p class="para">HTML</p>
   </div>
 
   <div class="choice1">
-   <img class="imgs" src="D:\my web\css.png" alt>
+   <img class="imgs" src="css.png" alt>
     <p class="para">CSS</p>
   </div>
   <div class="choice1">
-  <img class="imgs" src="D:\my web\js.png" alt>
+  <img class="imgs" src="js.png" alt>
    <p class="para">JAVA SCRIPT</p>
   </div>
  <div class="choice1">
-  <img class="imgs" src="D:\my web\java.png" alt>
+  <img class="imgs" src="java.png" alt>
    <p class="para">JAVA</p>
   </div>
  <div class="choice1">
-  <img class="imgs" src="D:\my web\sql.png" alt>
+  <img class="imgs" src="sql.png" alt>
    <p class="para">MY SQL</p>
  </div>
  <div class="choice1">
-  <img class="imgs" src="D:\my web\c.png" alt>
+  <img class="imgs" src="c.png" alt>
    <p class="para">C LANGUAGE</p>
  </div>
  <div class="choice1">
-  <img class="imgs" src="D:\my web\asp.png"  alt>
+  <img class="imgs" src="asp.png"  alt>
    <p class="para">ASP .NET</p>
  </div>
 </div>
@@ -737,11 +737,11 @@ Whether it's developing responsive front-end designs or ensuring robust back-end
         <h2 class="proh2">My Projects</h2><br>
         <div class="projects-gallery">
             <div class="project">
-                <img src="C:\Users\varsh\Pictures\Screenshots\Screenshot 2025-03-20 220151.png" alt="Project 1">
+                <img src="Screenshot 2025-03-20 220151.png" alt="Project 1">
                 <p><b>ONLINE TEACHING</b><br> </p><p> A website I built using ASP.NET and C #.</p><br><br>
 <button class="view-btn">View</button>            </div>
             <div class="project">
-            <img src="C:\Users\varsh\Pictures\Screenshots\Screenshot 2025-03-20 221238.png" alt="Project 2">
+            <img src="Screenshot 2025-03-20 221238.png" alt="Project 2">
             <p><b>Calculator</b><br> </p><p> A web application built using HTML and CSS , Java Script.</p><br><br>
 <button class="view-btn"><a href="https://anubhav1121.github.io/Calculator/" >View</a></button>
         </div>
@@ -775,7 +775,7 @@ Whether it's developing responsive front-end designs or ensuring robust back-end
     <section class="footer" >
 <div>
  <br>
- <img src="C:\Users\varsh\OneDrive\Documents\Pictures\G1.jpg" alt="Avatar"class="imgf">
+ <img src="G1.jpg" alt="Avatar"class="imgf">
  <br>
 </div>
  <div class="con">
